# cpp-middle-project-sprint-2_scan_dynamic

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: parse.hpp  scan.hpp  types.hpp
tests/: scan_test.cpp
